Moved flex-wrap scope to views.scss and adjusted areas of study exposed form to work with this fix

--- a/docroot/themes/custom/uids_base/scss/views/view-display-id-people.scss
+++ b/docroot/themes/custom/uids_base/scss/views/view-display-id-people.scss
@@ -2,13 +2,6 @@
 @import "uids/assets/scss/_utilities.scss";
 
 .view-id-people {
-  .views-exposed-form {
-    .form--inline {
-      @include breakpoint(sm) {
-        flex-wrap: unset;
-      }
-    }
-  }
   .view-header {
     width: 100%;
   }
